--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+#clearmargins {
+  margin: 0px;
+}
+#clearpadding{
+  padding: 0px;
+}
 .mainfooter {
-padding: 0;
-  }
+padding-top: 10px;
+padding-bottom:10px;
+}
