--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,16 @@
 padding-top: 10px;
 padding-bottom:10px;
 }
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  display: fixed;
+  position: 100%;
+}
