fixed input colors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,14 @@ width: 100%;
   padding-top: 20px;
 }
 
+.input-field .prefix.active {
+  color: mediumblue;
+}
+
+#icon_prefix:focus {
+  border-bottom: 1px solid mediumblue;
+  box-shadow: 0 1px 0 0 mediumblue;
+}
+#icon_prefix:focus + label {
+  color: mediumblue
+}
